--- a/Unforgettable Vacation.html
+++ b/Unforgettable Vacation.html
@@ -144,8 +144,9 @@
         </p>
     </div>
     <footer>
-        Coded with 💜 by
-        <a href="https://www.shecodes.io/" target="_blank">Alberta Jansen Van Nieuwenhuizen</a>
+         This project was coded with ❤️ by <strong>Alberta Jansen Van Nieuwenhuizen</strong> and is
+        <a href="https://github.com/alberta-code/world-clock" target="_blank">
+            open sourced on GitHub</a>
     </footer>
 
     <script>
