--- a/Unforgettable Vacation.html
+++ b/Unforgettable Vacation.html
@@ -72,12 +72,12 @@
             background: white;
         }
 
-        .fishing-intro-picture {
+        .Vacation-intro-picture {
             border-radius: 10px;
             transition: all 150ms ease-in-out;
         }
 
-        .fishing-intro-picture:hover {
+        .Vacation-intro-picture:hover {
             filter: contrast(80%);
             transform: scale(1.1);
         }
